fixed some more style issues with overflow on VW and fixed video control

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,8 @@ p {
 }
 
 .para-div {
-  width: 75vw;
+  width: 70vw;
+  overflow-wrap: normal;
   margin: 0 auto 32px auto;
   text-align: center;
   align-content: center;
